--- a/583FinalReport.Rmd
+++ b/583FinalReport.Rmd
@@ -601,32 +601,35 @@ In order to arrive at a more parsimonious model, significance of the variables u
 
 
 ## 4. Conclusion
-The non-normality nature of the dataset has been observed and verified by rigorous testings and validation in this report.  This characteristic has greatly limited the applicablity of many popular common models which rely on the assumption of normal distribution.  After further model assessment, we are finally able to come into the best available conclusion that NOREG and LASSO are the two best-performing models based on model performance indicators like MSE and R-squared values.  
+### First set of models for predicting life expectancy
+The two goals to evaluate and conclude during this project are a) to identify and arrive at a parsimonious model that can predict life expectancy to a level of $>80%$ with less variables than the orginal dataset b) to evaluate and show that a complex and mixed-type dataset is less likely to have all the predictor variables linearly related to the output response variable and thus likely will require a more flexible and complex model for better performance. On a side note, it is also an indicator that predicting life expectancy is complex. 
 
-We find that life expectancy is....[KT : I literally have no idea what to put there....may be I leave it to Viji to continue and finally conclude the report :) ]
+Both these goals have been successfully evaluated during the course of the project and the conclusion is that life expectancy is by nature not a normally distributed response variable. Performing simple linear regression modelling on this complex data is not sufficient or valid. There are two models that are identified that can be used to predict life expectancy with $R^2$ of more than 80% aka the two models are able to explain variation in life expectancy to an extent of $80%+$.
+
+The nonparametric model has a higher $R^2$ of 87%(approx) when compared to the parametric model $R^2$ of 83%(approx). So, it is concluded that nonparametric model fits the given dataset better and is selected as the best one among all assessed models for use of predicting life expectancy.
+
+In order to arrive at a more parsimonious model, significance of the variables used in nonparametric regression is measured and all the 12 variables are significant and recommended to be retained in the model. The variables selected in predicting life expectancy by the recommended models are: 
 
 ### Future improvements
-While a number of different models and statistical tests have been explored within a limited time frame of this project, we can hardly conclude we have identified the globally optimal models.  In fact, in order to limit the complication of this analysis and make it reasonably achievable, we have adopted certain model and analysis simplification in a few aspects.  These assumptions/simplification may, however, potentially have adverse effect on our underlying models accuracy.  As rooms of further improvement works based on this report, the following aspects are suggested for future exploration, studies and implementation to see if an even better-performing model can be attained.   
+Based on the knowledge of the domain and analysis from the data, different models and statistical tests are performed in the given time frame of this project to predict life expectancy. There are more opportunities for improvements we discovered during the course of this project and the team suggests the following for future exploration, studies and implementation to see if an even better-performing model can be attained.   
 
-1. Currently, no particular handling has been done to process the categorical, ordinal, and nominal variables.  Current variables are simply fit into different models with "as-is" data basis.  Further exploration on whether some techniques (such as Variables Encoding/transformation, factorization factor()) can be deployed to achieve models improvement is preferable.
+1. Currently, variables are used "as-is" from the dataset.  Some techniques for variable encoding/transformation can be explored. (Add additive models...or spline)
 
-2. Performing non-parametric model in our analysis has taken a substantial amount of computing resources.  The studies on the non-parametric model what we have achieved so far is generally sufficient for measuring long run performance.  While resources and time allow in the future, we may consider performing further fine-tuning on this by enforcing dataset splitting into training and testing set under non-parametric model fitting, which can possibly have a better account of the model performance.   
+2. Performing non-parametric model analysis consumed substantial amount of computing resources.  The results achieved so far is generally sufficient for measuring long run performance.  While resources and time allow in the future, consider fine-tuning this model by enforcing dataset splitting into training and testing sets, which can provide a better account on the predictive performance on unseen data.   
 
-3. According to the earlier Multicollinearity studies (Part 2), correlation is found between the variables infant.deaths and under.five.deaths.  It is understood that such correlation may cause undesirable effect on model accuracy, fitting and interpretation.   To resolve this issue, we may explore possible tactics such as removing one of the correlated variables, or using factor analysis (factanal) to address the multicollinearity issue to enhance the models.
+3. According to the earlier multicollinearity studies (Refer Appendix), correlation is found between the variables infant.deaths and under.five.deaths.  It is understood that such correlation may cause undesirable effect on model accuracy, fitting and interpretation.   To resolve this issue, it is suggested to remove one of the correlated variables with the higher VIF (Variable Inflation Factor) score.
 
-4. Currently in our analysis, data implantation (rather than removing the records with NA values) has been deployed in order to retain as many records as possible and simplify/streamline the subsequent analysis.  Although data implantation is a common industry practice, We are not 100% sure if such procedure would affect the model accuracy.  In this regard, we may investigate and compare different null data handling techniques (apart from data implantation using mean) and investigate if we can achieve our modelling improvement as a result.
+4. Currently in the analysis, data is imputed for NA values (rather than removing the records with NA values) has been deployed to retain more information and the value generated by other valid data columns of the record.  Although data imputation is a common industry practice, different null data handling techniques (apart from data imputation using mean) can be investigated in future and compared with current results.
 
 
 ### Interesting challenges
-During this project, a number of challenges are encountered.  These challenges have created extra hurdles and unforeseeable overheads on our projects, or have caused unexpected complication for the project team in order to efficiently and confidently identify the most suitable models.    
+Every project deals with an interesting amount of challenges and there are some interesting challenges encountered during the course of this project as well. The team needed to pivot constantly in order to efficiently and confidently come up with the first suitable model for predicting life expectancy.    
 
-1. Running npreg on our model is extremely time-consuming.  It took 30 hours in a notebook computer.  This undesirable situation has seriously constrained our flexibility in fine-tuning and re-running the model with different model settings such as variable combination because we simply cannot afford adjusting the model fitting to look more a potentially more optimal model fitting.
+1. Running npreg algorithm using R on this dataset is extremely time-consuming.  It took 30 hours in a notebook computer.  This undesirable situation has seriously constrained our flexibility in fine-tuning and re-running the model with different model settings such as different variables selection, train-test assessments because time is limited to compare different sets and select optimal fit.
 
 2. Similarly, running model significance took more than 30 hours.  This has caused similar consequence as the previous point 1.
 
-3. As mentioned in the earlier analysis, bimodal distribution is identified in the dataset, which has violated the basic assumptions of many parametric models.  This behavior has therefore severely limited the applicability of many parametric modelling.  We also lack of sufficient knowledge on how to optimally model and analyze bimodal distribution.
-
-4. The dataset has demonstrated quite a high proportion of NA values.  Several columns contain significantly more than 5% of NA values.  If we decide to adopt the 5% threshold and remove all records (e.g. dropping columns or removing rows) with NA values which exceeds the 5% threshold, it would result in a significant amount of records being removed and only remain a much smaller sample size available for further analysis.  This may tremendously and adversely impact and deteriorate the analysis accuracy and reliability. 
+3. As mentioned in the earlier analysis, the distribution is not normal and this limited the application of several simple models that have a strong assumption on the underlying distribution.  The team also has very limited experience in bimodal or multimodal distributions so even though the response variable seems to be bimodal, no specific assessments or fitting is carried out. 
 
 
 ## Appendix
